plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.0'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'application' // application 플러그인 추가
}

group = 'toy'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
    mavenCentral()

	maven {
		url 'https://repository.aspose.com/repo/'
	}
}

bootJar {
    // mainClassName 설정 제거
}


dependencies {
	//  Aspose.Cells for Java
	implementation 'com.aspose:aspose-cells:20.8'

	// proj4j를 이용한 좌표 변환
	implementation 'org.locationtech.proj4j:proj4j:1.1.0'

	// POI
	implementation 'org.apache.poi:poi:5.2.3'
	implementation 'org.apache.poi:poi-ooxml:5.2.3'

	// JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	// MySQL
	runtimeOnly 'com.mysql:mysql-connector-j'

	// Crawling
	implementation 'org.jsoup:jsoup:1.15.4'
	implementation 'org.seleniumhq.selenium:selenium-java:4.20.0'
	implementation 'io.github.bonigarcia:webdrivermanager:5.7.0'

	// Thymeleaf
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'

	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'

	compileOnly 'org.projectlombok:lombok:1.18.22'
	annotationProcessor 'org.projectlombok:lombok:1.18.22'

	testImplementation 'org.projectlombok:lombok:1.18.28'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}
